# osm-gps-map

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  NEWS  README  aclocal.m4  autogen.sh  catalog.xml  config.h.in  configure.ac  index.html  osmgpsmap-1.0.pc.in  osmgpsmap-1.2.pc  osmgpsmap-1.2.pc.in  osmgpsmap.pc.in  replace.c  uncrustify.cfg
.github/workflows/: ci.yml
docs/: Makefile  Makefile.in
docs/reference/: Makefile  Makefile.am  Makefile.in  libosmgpsmap-decl-list.txt  libosmgpsmap-decl.txt  libosmgpsmap-docs.xml  libosmgpsmap-sections.txt  libosmgpsmap-undeclared.txt  libosmgpsmap-undocumented.txt  libosmgpsmap-unused.txt  libosmgpsmap.args  libosmgpsmap.hierarchy  libosmgpsmap.interfaces  libosmgpsmap.prerequisites  libosmgpsmap.signals  libosmgpsmap.types  version.xml.in
docs/reference/.libs/: libosmgpsmap-scan  lt-libosmgpsmap-scan
docs/reference/html/: OsmGpsMap.html  OsmGpsMapImage.html  OsmGpsMapLayer.html  OsmGpsMapPoint.html  OsmGpsMapTrack.html  annotation-glossary.html  api-index-deprecated.html  api-index-full.html  api-reference-deprecated.html  api-reference.html  index.html  index.sgml  libosmgpsmap-OsmGpsMap-Deprecated.html  libosmgpsmap-OsmGpsMapPoint.html  libosmgpsmap.devhelp  libosmgpsmap.devhelp2  style.css
docs/reference/tmpl/: osm-gps-map-deprecated.sgml  osm-gps-map-image.sgml  osm-gps-map-layer.sgml  osm-gps-map-point.sgml  osm-gps-map-track.sgml  osm-gps-map.sgml
docs/reference/xml/: annotation-glossary.xml  api-index-0.6.0.xml  api-index-0.7.0.xml  api-index-0.7.2.xml  api-index-0.7.4.xml  api-index-1.0.0.xml  api-index-1.1.0.xml  api-index-1.2.0.xml  api-index-deprecated.xml  api-index-full.xml  gtkdocentities.ent  libosmgpsmap-doc.bottom  object_index.sgml  osm-gps-map-deprecated.xml  osm-gps-map-image.xml  osm-gps-map-layer.xml  osm-gps-map-point.xml  osm-gps-map-track.xml  osm-gps-map.xml  tree_index.sgml
examples/: .gitignore  Makefile.am  README  clickable_track.c  editable_clickable_track.c  editable_track.c  editable_tracks.c  env.sh  mapviewer.c  mapviewer.js  mapviewer.py  mapviewer.ui  polygon.c
glade/: osmgpsmap-catalog.xml
m4/: .gitignore  gtk-doc.m4
python/: .gitignore  AUTHORS  Makefile.am  README  aclocal.m4  configure.ac  mapviewer.py  openstreetmap-gps-map.py  osmgpsmap-compat.defs  osmgpsmap.defs  osmgpsmap.override  osmgpsmapmodule.c  setup-pygtksourceview.py  setup.py  test.sh
python/m4/: am_check_python_headers.m4
src/: .gitignore  Makefile.am  OsmGpsMap-1.0.metadata  OsmGpsMap.vapi  converter.c  converter.h  main.c  mapviewer.ui  osd-utils.c  osd-utils.h  osm-gps-map-compat.c  osm-gps-map-compat.h  osm-gps-map-image.c  osm-gps-map-image.h  osm-gps-map-layer.c  osm-gps-map-layer.h  osm-gps-map-osd.c  osm-gps-map-osd.h  osm-gps-map-point.c  osm-gps-map-point.h  osm-gps-map-polygon.c  osm-gps-map-polygon.h  osm-gps-map-source.c  osm-gps-map-source.h  osm-gps-map-track.c  osm-gps-map-track.h  osm-gps-map-types.h  osm-gps-map-widget.c  osm-gps-map-widget.h  osm-gps-map.c  osm-gps-map.h  private.h
tests/: test.py
